unpackaged/main/default/objects/BL_WECHAT_Configurations__c/BL_WECHAT_Configurations__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>BL_WECHAT_Configurations</label>
</CustomObject>