unpackaged/main/default/objects/BL_WECHAT_Configurations__c/fields/Default_Creation_SA__c.field-meta.xml
<CustomField>
    <fullName>Default_Creation_SA__c</fullName>
    <label>Default Creation SA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>