unpackaged/main/default/objects/BL_WECHAT_Configurations__c/fields/Default_Creation_Store__c.field-meta.xml
<CustomField>
    <fullName>Default_Creation_Store__c</fullName>
    <label>Default Creation Store</label>
    <length>50</length>
    <type>Text</type>
</CustomField>