unpackaged/main/default/objects/BL_WECHAT_Configurations__c/fields/Default_Lastname__c.field-meta.xml
<CustomField>
    <fullName>Default_Lastname__c</fullName>
    <label>Default Lastname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>